--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "start_url": "./index.html",
     "display": "fullscreen",
     "background_color": "#ffffff",
-    "theme_color": "b30a00",
+    "theme_color": "#b30a00",
     "icons": [
         {
             "src": "icons/icon-192x192.png",
